Fixed the index.html file, _main.Rmd deletes automatically now, renamed _book to docs

--- a/FEV1.Rmd
+++ b/FEV1.Rmd
@@ -8,8 +8,10 @@ runtime: "shiny"
 output:
   bookdown::gitbook:
     lib_dir: "book_assets"
+    delete_merged_file: TRUE
     table_css: FALSE
-    css: ["pretty-styles.css", "cayman.css", "python.css"]
+    output_dir: "docs"
+    css: ["pretty-styles.css", "cayman.css", "python.css", "index.html"]
     config:
       toc:
         collapse: subsection
